# setdoc

./: MANIFEST.in  Makefile  README.rst  pyproject.toml  run_tests.py
docs/: CNAME  index.html  v1.0.rst  v1.1.rst  v1.2.rst  v1.3.rst
make/: toml_sorted_cfg.txt
src/setdoc/: __init__.py  core.py
src/setdoc/_utils/: __init__.py  cfg.toml
src/setdoc/core/: Basics.py  SetDoc.py  __init__.py  basic.py  getbasicdoc.py
src/setdoc/tests/: __init__.py  test_core.py
src/setdoc/typing/: SupportsDoc.py  SupportsDocAndName.py
