[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "Set the doc string."
keywords = []
name = "setdoc"
readme = "README.rst"
requires-python = ">=3.8"
version = "0.1.3+local.1"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://pypi.org/project/setdoc"
Download = "https://pypi.org/project/setdoc/#files"
Index = "https://pypi.org/project/setdoc/"
Source = "https://github.com/johannes-programming/setdoc/"
Website = "https://setdoc.johannes-programming.online/"
