[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
description = "This project helps to set the doc string."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "setdoc"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.2.26"

[project.urls]
Download = "https://pypi.org/project/setdoc/#files"
Index = "https://pypi.org/project/setdoc/"
Source = "https://github.com/johannes-programming/setdoc/"
Website = "https://setdoc.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false
